# tiny-AES-c

./: .gitignore  CMakeLists.txt  aes.h  build_emscripten.sh  build_native.sh
tests/: base64.hpp  main.cpp  run.sh
